Change position of tint to fixed
This is so that it covers area currently out of view too.

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -14,7 +14,7 @@ body {
 
 body:after { 
   content: "";
-  position: absolute;
+  position: fixed;
   background: rgba(0, 0, 0, 0.55); 
   top: 0; bottom: 0; left: 0; right: 0; 
   z-index: -1;
